Fix SD/eMMC/WLAN/BT device tree settings for F&S boards
Different F&S boards have different devices connected to the USDHC ports.
These may be on-board eMMC, on-board WLAN/BT, on-board SD card slots and
external SD card slots that may be used for different purposes. Testing
showed that signals going to external SD card slots need significantly
higher drive strengths than signals going to directly soldered on-board
devices. This is due to the implicit resistors on the connector transitions,
e.g module to carrier board and slot to card.

This requires different pad settings for these use cases, which in turn
requires support for these use cases. So add CONFIG macros for WLAN and
EMMC and rework the USDHC configurations based on that. While we are at it,
also add CONFIG options for Card Detect (CD) and Write Protect (WP) where
appropriate. Fix the pad settings for these signals in some places and add
comments to show why.

The vmmc and vqmmc voltages were mixed up in some places and voltage-ranges
and property no-1-8-v were also often missing.

Fixes are done in the following device tree files:

armstonea9qdl.dtsi, armstonea9r2qdl.dtsi, efusa9dl.dts, efusa9q.dts,
efusa9qdl.dtsi, picomoda9dl.dts, picomoda9q,dts, picomoda9qdl.dtsi,
netdcua9qdl.dtsi, qblissa9dl,dts, qblissa9q,dts, qblissa9qdl.dtsi,
qblissa9r2dl.dts, qblissa9r2q.dts, qblissa9r2qdl.dtsi, efusa9x.dts,
picocoma9x.dts, cont1.dts, efusa7ul.dts, cube2.0.dts, cubea7ul.dts.

--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -1090,6 +1090,11 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc3>;
 	cd-gpios = <&gpio6 15 GPIO_ACTIVE_LOW>;
+	vmmc-supply = <&reg_vref_3v3>;	/* VDD */
+	vqmmc-supply = <&reg_vref_3v3>;	/* VDD_IO */
+	voltage-ranges = <3300 3300>;
+	no-1-8-v;
+	keep-power-in-suspend;
 	status = "okay";
 };
 #endif /* CONFIG_ARMSTONEA9_SD_A */
@@ -1518,7 +1523,9 @@
 				MX6QDL_PAD_SD3_DAT2__SD3_DATA2		0x17051
 				MX6QDL_PAD_SD3_DAT3__SD3_DATA3		0x17051
 				/* RST is active low */
-				MX6QDL_PAD_SD3_RST__GPIO7_IO08		0x0b060
+				MX6QDL_PAD_SD3_RST__GPIO7_IO08		0x1b060
+				/* Card Detect (CD), active low (pull-up) */
+				MX6QDL_PAD_NANDF_CS2__GPIO6_IO15	0x17000
 			>;
 		};
 #endif /* CONFIG_ARMSTONEA9_SD_A */
