--- a/arch/arm/boot/dts/cube2.0.dts
+++ b/arch/arm/boot/dts/cube2.0.dts
@@ -64,9 +64,9 @@
 			startup-delay-us = <70000>;
 		};
 
-		reg_vwlan_1v8: reg_vwlan_1v8 {
+		reg_wlan_1v8: reg_wlan_1v8 {
 			compatible = "regulator-fixed";
-			regulator-name = "WLAN_1V8";
+			regulator-name = "VQMMC WLAN_1V8";
 			regulator-min-microvolt = <1800000>;
 			regulator-max-microvolt = <1800000>;
 			regulator-always-on;
@@ -209,9 +209,9 @@
 	bus-width = <4>;
 	non-removable;
 	cap-power-off-card;
-	vmmc-supply = <&wlan_en_reg>;
-//###	vqmmc-supply = <&reg_vwlan_1v8>;
-//###	voltage-ranges = <1800 1800>;
+	vmmc-supply = <&wlan_en_reg>;	/* VDD, misused for WLAN_EN */
+	vqmmc-supply = <&reg_wlan_1v8>;	/* VDD_IO */
+	voltage-ranges = <1800 1800>;
 	keep-power-in-suspend;
 	enable-sdio-wakeup;
 	status = "okay";
@@ -297,12 +297,12 @@
 
 		pinctrl_usdhc1: usdhc1grp {
 			fsl,pins = <
-				MX6UL_PAD_SD1_CMD__USDHC1_CMD		0x17059
-				MX6UL_PAD_SD1_CLK__USDHC1_CLK		0x10071
-				MX6UL_PAD_SD1_DATA0__USDHC1_DATA0	0x17059
-				MX6UL_PAD_SD1_DATA1__USDHC1_DATA1	0x17059
-				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2	0x17059
-				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3	0x17059
+				MX6UL_PAD_SD1_CMD__USDHC1_CMD		0x17091
+				MX6UL_PAD_SD1_CLK__USDHC1_CLK		0x10091
+				MX6UL_PAD_SD1_DATA0__USDHC1_DATA0	0x17091
+				MX6UL_PAD_SD1_DATA1__USDHC1_DATA1	0x17091
+				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2	0x17091
+				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3	0x17091
 			>;
 		};
 
