--- a/arch/arm/boot/dts/cubea7ul.dts
+++ b/arch/arm/boot/dts/cubea7ul.dts
@@ -80,6 +80,14 @@
 		#address-cells = <1>;
 		#size-cells = <0>;
 
+		reg_wlan_1v8: regulator_wlan {
+			compatible = "regulator-fixed";
+			regulator-name = "vqmmc-wlan-1v8";
+			regulator-min-microvolt = <1800000>;
+			regulator-max-microvolt = <1800000>;
+			regulator-always-on;
+		};
+
 		wlan_en_reg: regulator_wl_en {
 			compatible = "regulator-fixed";
 			regulator-name = "WLAN";
@@ -312,7 +320,9 @@
 	bus-width = <4>;
 	non-removable;
 	cap-power-off-card;
-	vmmc-supply = <&wlan_en_reg>;
+	vmmc-supply = <&wlan_en_reg>;	/* VDD */
+	vqmmc-supply = <&reg_wlan_1v8>;	/* VDD_IO */
+	voltage-ranges = <1800 1800>;
 	keep-power-in-suspend;
 	enable-sdio-wakeup;
 	status = "okay";
@@ -420,12 +430,12 @@
 
 		pinctrl_usdhc1: usdhc1grp {
 			fsl,pins = <
-				MX6UL_PAD_SD1_CMD__USDHC1_CMD		0x17059
-				MX6UL_PAD_SD1_CLK__USDHC1_CLK		0x10071
-				MX6UL_PAD_SD1_DATA0__USDHC1_DATA0	0x17059
-				MX6UL_PAD_SD1_DATA1__USDHC1_DATA1	0x17059
-				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2	0x17059
-				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3	0x17059
+				MX6UL_PAD_SD1_CMD__USDHC1_CMD		0x17091
+				MX6UL_PAD_SD1_CLK__USDHC1_CLK		0x10091
+				MX6UL_PAD_SD1_DATA0__USDHC1_DATA0	0x17091
+				MX6UL_PAD_SD1_DATA1__USDHC1_DATA1	0x17091
+				MX6UL_PAD_SD1_DATA2__USDHC1_DATA2	0x17091
+				MX6UL_PAD_SD1_DATA3__USDHC1_DATA3	0x17091
 			>;
 		};
 
