--- a/arch/arm/boot/dts/efusa9x.dts
+++ b/arch/arm/boot/dts/efusa9x.dts
@@ -1654,7 +1654,7 @@ lvds_wvga {				\
 				MX6SX_PAD_SD1_DATA0__USDHC1_DATA0	0x17091
 				MX6SX_PAD_SD1_DATA1__USDHC1_DATA1	0x17091
 				MX6SX_PAD_SD1_DATA2__USDHC1_DATA2	0x17091
-				MX6SX_PAD_SD1_DATA3__USDHC1_DATA3	0x13091
+				MX6SX_PAD_SD1_DATA3__USDHC1_DATA3	0x17091
 				/* CD */
 				MX6SX_PAD_GPIO1_IO02__GPIO1_IO_2	0x17000
 			>;
@@ -1671,13 +1671,17 @@ lvds_wvga {				\
 				MX6SX_PAD_SD1_DATA0__USDHC1_DATA0	0x170b1
 				MX6SX_PAD_SD1_DATA1__USDHC1_DATA1	0x170b1
 				MX6SX_PAD_SD1_DATA2__USDHC1_DATA2	0x170b1
-				MX6SX_PAD_SD1_DATA3__USDHC1_DATA3	0x130b1
+				MX6SX_PAD_SD1_DATA3__USDHC1_DATA3	0x170b1
 #ifdef CONFIG_EFUSA9X_SD_A_CD
-				/* CD */
+				/* Card Detect (CD), active low (pull-up) */
 				MX6SX_PAD_GPIO1_IO02__GPIO1_IO_2	0x17000
 #endif
 #ifdef CONFIG_EFUSA9X_SD_A_WP
-				/* WP */
+				/*
+				 * Write Protect (WP), active high (pull-up)
+				 * lock:   WP switch open, pulled high
+				 * unlock: WP switch closed, connects to GND
+				 */
 				MX6SX_PAD_GPIO1_IO03__GPIO1_IO_3	0x17000
 #endif
 			>;
@@ -1691,13 +1695,17 @@ lvds_wvga {				\
 				MX6SX_PAD_SD4_DATA0__USDHC4_DATA0	0x170b1
 				MX6SX_PAD_SD4_DATA1__USDHC4_DATA1	0x170b1
 				MX6SX_PAD_SD4_DATA2__USDHC4_DATA2	0x170b1
-				MX6SX_PAD_SD4_DATA3__USDHC4_DATA3	0x130b1
+				MX6SX_PAD_SD4_DATA3__USDHC4_DATA3	0x170b1
 #ifdef CONFIG_EFUSA9X_SD_A_CD
-				/* CD */
+				/* Card Detect (CD), active low (pull-up) */
 				MX6SX_PAD_SD4_DATA7__GPIO6_IO_21	0x17000
 #endif
 #ifdef CONFIG_EFUSA9X_SD_A_WP
-				/* WP */
+				/*
+				 * Write Protect (WP), active high (pull-up)
+				 * lock:   WP switch open, pulled high
+				 * unlock: WP switch closed, connects to GND
+				 */
 				MX6SX_PAD_SD4_DATA6__GPIO6_IO_20	0x17000
 #endif
 			>;
@@ -1714,13 +1722,17 @@ lvds_wvga {				\
 				MX6SX_PAD_SD2_DATA0__USDHC2_DATA0	0x170b1
 				MX6SX_PAD_SD2_DATA1__USDHC2_DATA1	0x170b1
 				MX6SX_PAD_SD2_DATA2__USDHC2_DATA2	0x170b1
-				MX6SX_PAD_SD2_DATA3__USDHC2_DATA3	0x130b1
+				MX6SX_PAD_SD2_DATA3__USDHC2_DATA3	0x170b1
 #ifdef CONFIG_EFUSA9X_SD_B_CD
-				/* CD */
+				/* Card Detect (CD), active low (pull-up) */
 				MX6SX_PAD_GPIO1_IO06__GPIO1_IO_6	0x17000
 #endif
 #ifdef CONFIG_EFUSA9X_SD_B_WP
-				/* WP */
+				/*
+				 * Write Protect (WP), active high (pull-up)
+				 * lock:   WP switch open, pulled high
+				 * unlock: WP switch closed, connects to GND
+				 */
 				MX6SX_PAD_GPIO1_IO07__GPIO1_IO_7	0x17000
 #endif
 			>;
@@ -1736,7 +1748,7 @@ lvds_wvga {				\
 				MX6SX_PAD_SD4_DATA0__USDHC4_DATA0	0x17091
 				MX6SX_PAD_SD4_DATA1__USDHC4_DATA1	0x17091
 				MX6SX_PAD_SD4_DATA2__USDHC4_DATA2	0x17091
-				MX6SX_PAD_SD4_DATA3__USDHC4_DATA3	0x13091
+				MX6SX_PAD_SD4_DATA3__USDHC4_DATA3	0x17091
 				MX6SX_PAD_SD4_DATA4__USDHC4_DATA4	0x17091
 				MX6SX_PAD_SD4_DATA5__USDHC4_DATA5	0x17091
 				MX6SX_PAD_SD4_DATA6__USDHC4_DATA6	0x17091
