--- a/arch/arm/boot/dts/qblissa9dl.dts
+++ b/arch/arm/boot/dts/qblissa9dl.dts
@@ -147,8 +147,11 @@ wvga {					\
 /* WLAN */
 #define CONFIG_QBLISSA9_WLAN
 
-/* SD-CARD - SD_C is micro SD */
-#define CONFIG_QBLISSA9_SD_C
+/* SD_A - On SKIT: Micro-SD Card Slot, CD always low, WP unused, 4 bit */
+#define CONFIG_QBLISSA9_SD_A
+//#define CONFIG_QBLISSA9_SD_A_CD
+//#define CONFIG_QBLISSA9_SD_A_WP
+//#define CONFIG_QBLISSA9_SD_A_8BIT
 
 /* I2C */
 #define CONFIG_QBLISSA9_I2C_A
