--- a/arch/arm/boot/dts/qblissa9q.dts
+++ b/arch/arm/boot/dts/qblissa9q.dts
@@ -167,8 +167,11 @@ wvga {					\
 /* WLAN */
 #define CONFIG_QBLISSA9_WLAN
 
-/* SD-CARD - SD_A is micro SD */
+/* SD_A - On SKIT: Micro-SD Card Slot, CD always low, WP unused, 4 bit */
 #define CONFIG_QBLISSA9_SD_A
+//#define CONFIG_QBLISSA9_SD_A_CD
+//#define CONFIG_QBLISSA9_SD_A_WP
+//#define CONFIG_QBLISSA9_SD_A_8BIT
 
 /* I2C */
 #define CONFIG_QBLISSA9_I2C_A
