--- a/arch/arm/boot/dts/qblissa9r2qdl.dtsi
+++ b/arch/arm/boot/dts/qblissa9r2qdl.dtsi
@@ -77,6 +77,14 @@
 #define __LVDS1_PRIMARY__
 #endif
 
+/* Check for invalid CONFIG combinations */
+
+/* If SD_A is not active, also CD and WP may not be used */
+#ifndef CONFIG_QBLISSA9R2_SD_A
+#undef CONFIG_QBLISSA9R2_SD_A_CD
+#undef CONFIG_QBLISSA9R2_SD_A_WP
+#endif
+
 / {
 	aliases {
 		mxcfb0 = &mxcfb0;
@@ -109,6 +117,28 @@
 			regulator-always-on;
 		};
 
+#ifdef CONFIG_QBLISSA9R2_WLAN
+		reg_wlan_3v3: regulator_wlan {
+			compatible = "regulator-fixed";
+			regulator-name = "vmmc-wlan-3v3";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+//###			gpio = <&gpio1 26 GPIO_ACTIVE_HIGH>;
+//###			enable-active-high;
+			regulator-always-on;
+		};
+#endif
+
+#ifdef CONFIG_QBLISSA9R2_SD_A
+		reg_sd_a: regulator_sd_a {
+			compatible = "regulator-fixed";
+			regulator-name = "SD_A";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			gpio = <&gpio3 14 0>;
+		};
+#endif
+
 		/* USB_OTG_PWR handled by USB controller, no regulator needed */
 #if 0 //###
 		reg_usb_otg_vbus: usb_otg_vbus {
@@ -131,16 +161,6 @@
 			regulator-always-on;
 		};
 #endif //###
-
-#ifdef CONFIG_QBLISSA9R2_WLAN
-		reg_wlan_vmmc_1v8: regulator_wlan {
-			compatible = "regulator-fixed";
-			regulator-name = "vmmc-wlan-1v8";
-			regulator-min-microvolt = <1800000>;
-			regulator-max-microvolt = <1800000>;
-			regulator-always-on;
-		};
-#endif
 
 		/* backlight ldb */
 		reg_ldb_bl: backlight_ldb {
@@ -198,10 +218,12 @@
 		ecc_strength = "8";
 	};
 
+#if 1 //###
 	sdhci1_pwrseq: sdhci1_pwrseq {
 		compatible = "mmc-pwrseq-simple";
 		reset-gpios = <&gpio1 26 GPIO_ACTIVE_LOW>;
 	};
+#endif //###
 
 	i2c_lvds: i2c-gpio-lvds {
 		compatible = "i2c-gpio";
@@ -791,14 +813,17 @@
 	pinctrl-0 = <&pinctrl_usdhc1>;
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>;
 	pinctrl-2 = <&pinctrl_usdhc1_200mhz>;
+	/* WLAN is non-removable, but CD tells us if it is equipped or not */
+	cd-gpios = <&gpio1 1 GPIO_ACTIVE_LOW>;
+	//non-removable;
 	bus-width = <4>;
-	vmmc-supply = <&reg_vref_3v3>;
-	non-removable;
+	vmmc-supply = <&reg_wlan_3v3>;	/* VDD */
+	vqmmc-supply = <&reg_vref_3v3>;	/* VDD_IO */
+	voltage-ranges = <3300 3300>;
+	no-1-8-v;
 	keep-power-in-suspend;
 	enable-sdio-wakeup;
 	mmc-pwrseq = <&sdhci1_pwrseq>;
-	vqmmc-supply = <&reg_wlan_vmmc_1v8>;
-	cd-gpios = <&gpio1 1 GPIO_ACTIVE_HIGH>;
 	status = "okay";
 };
 #endif
@@ -808,21 +833,35 @@
 	/* Micro-SD-Card-Slot, CD is active low */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc2>;
-	cd-gpios = <&gpio1 4 GPIO_ACTIVE_HIGH>;
+#ifdef CONFIG_QBLISSA9R2_SD_A_CD
+	cd-gpios = <&gpio1 4 GPIO_ACTIVE_LOW>;
+#else
+	non-removable;
+#endif
+#ifdef CONFIG_QBLISSA9R2_SD_A_WP
 	wp-gpios = <&gpio1 2 GPIO_ACTIVE_HIGH>;
+#endif
+	bus-width = <4>;
+	vmmc-supply = <&reg_sd_a>;	/* VDD */
+	vqmmc-supply = <&reg_vref_3v3>;	/* VDD_IO */
+	voltage-ranges = <3300 3300>;
+	no-1-8-v;
+	keep-power-in-suspend;
 	status = "okay";
 };
-#endif /* CONFIG_QBLISSA9R2_SD_B */
+#endif /* CONFIG_QBLISSA9R2_SD_A */
 
 #ifdef CONFIG_QBLISSA9R2_EMMC
 &usdhc3 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc3>;
-	no-1-8-v;
-	/* Use 8 data lines for eMMC */
-	bus-width = <8>;
 	non-removable;
-	vmmc-supply = <&reg_vref_3v3>;
+	bus-width = <8>;
+	vmmc-supply = <&reg_vref_3v3>;	/* VDD */
+	vqmmc-supply = <&reg_vref_3v3>;	/* VDD_IO */
+	voltage-ranges = <3300 3300>;
+	no-1-8-v;
+	keep-power-in-suspend;
 	status = "okay";
 };
 #endif
@@ -972,8 +1011,6 @@
 				MX6QDL_PAD_EIM_DA12__GPIO3_IO12		0x0b0b0
 				/* SATA ACT */
 				MX6QDL_PAD_EIM_DA13__GPIO3_IO13		0x0b0b0
-				/* SD2 POWER */
-				MX6QDL_PAD_EIM_DA14__GPIO3_IO14		0x0b0b0
 			>;
 		};
 
@@ -1171,14 +1208,16 @@
 #ifdef CONFIG_QBLISSA9R2_WLAN
 		pinctrl_usdhc1:usdhc1grp {
 			fsl,pins = <
-				MX6QDL_PAD_SD1_CMD__SD1_CMD		0x17059
-				MX6QDL_PAD_SD1_CLK__SD1_CLK		0x10071
-				MX6QDL_PAD_SD1_DAT0__SD1_DATA0		0x17059
-				MX6QDL_PAD_SD1_DAT1__SD1_DATA1		0x17059
-				MX6QDL_PAD_SD1_DAT2__SD1_DATA2		0x17059
-				MX6QDL_PAD_SD1_DAT3__SD1_DATA3		0x17059
+				MX6QDL_PAD_SD1_CMD__SD1_CMD		0x17091
+				MX6QDL_PAD_SD1_CLK__SD1_CLK		0x10091
+				MX6QDL_PAD_SD1_DAT0__SD1_DATA0		0x17091
+				MX6QDL_PAD_SD1_DAT1__SD1_DATA1		0x17091
+				MX6QDL_PAD_SD1_DAT2__SD1_DATA2		0x17091
+				MX6QDL_PAD_SD1_DAT3__SD1_DATA3		0x17091
 				/* WLAN_RESET with external pull-down */
-				MX6QDL_PAD_ENET_RXD1__GPIO1_IO26	0x100b0
+				MX6QDL_PAD_ENET_RXD1__GPIO1_IO26	0x10090
+				/* Card Detect (CD), active low (pull-up) */
+				MX6QDL_PAD_GPIO_1__GPIO1_IO01		0x17000
 			>;
 		};
 
@@ -1192,6 +1231,8 @@
 				MX6QDL_PAD_SD1_DAT3__SD1_DATA3		0x170b9
 				/* WLAN_RESET with external pull-down */
 				MX6QDL_PAD_ENET_RXD1__GPIO1_IO26	0x100b0
+				/* Card Detect (CD), active low (pull-up) */
+				MX6QDL_PAD_GPIO_1__GPIO1_IO01		0x17000
 			>;
 		};
 
@@ -1205,6 +1246,8 @@
 				MX6QDL_PAD_SD1_DAT3__SD1_DATA3		0x170f9
 				/* WLAN_RESET with external pull-down */
 				MX6QDL_PAD_ENET_RXD1__GPIO1_IO26	0x100b0
+				/* Card Detect (CD), active low (pull-up) */
+				MX6QDL_PAD_GPIO_1__GPIO1_IO01		0x17000
 			>;
 		};
 #endif
@@ -1212,12 +1255,26 @@
 #ifdef CONFIG_QBLISSA9R2_SD_A
 		pinctrl_usdhc2: usdhc2grp {
 			fsl,pins = <
-				MX6QDL_PAD_SD2_CMD__SD2_CMD		0x17051
-				MX6QDL_PAD_SD2_CLK__SD2_CLK		0x10051
-				MX6QDL_PAD_SD2_DAT0__SD2_DATA0		0x17051
-				MX6QDL_PAD_SD2_DAT1__SD2_DATA1		0x17051
-				MX6QDL_PAD_SD2_DAT2__SD2_DATA2		0x17051
-				MX6QDL_PAD_SD2_DAT3__SD2_DATA3		0x17051
+				MX6QDL_PAD_SD2_CMD__SD2_CMD		0x170b1
+				MX6QDL_PAD_SD2_CLK__SD2_CLK		0x100b1
+				MX6QDL_PAD_SD2_DAT0__SD2_DATA0		0x170b1
+				MX6QDL_PAD_SD2_DAT1__SD2_DATA1		0x170b1
+				MX6QDL_PAD_SD2_DAT2__SD2_DATA2		0x170b1
+				MX6QDL_PAD_SD2_DAT3__SD2_DATA3		0x170b1
+				/* SD_A power, active low */
+				MX6QDL_PAD_EIM_DA14__GPIO3_IO14		0x170b0
+#ifdef CONFIG_QBLISSA9R2_SD_A_CD
+				/* Card Detect (CD), active low (pull-up) */
+				MX6QDL_PAD_GPIO_4__GPIO1_IO04		0x17000
+#endif
+#ifdef CONFIG_QBLISSA9R2_SD_A_WP
+				/*
+				 * Write Protect (WP), active high (pull-up)
+				 * lock:   WP switch open, pulled high
+				 * unlock: WP switch closed, connects to GND
+				 */
+				MX6QDL_PAD_GPIO_2__GPIO1_IO02		0x17000
+#endif
 			>;
 		};
 #endif
@@ -1225,18 +1282,18 @@
 #ifdef CONFIG_QBLISSA9R2_EMMC
 		pinctrl_usdhc3: usdhc3grp {
 			fsl,pins = <
-				MX6QDL_PAD_SD3_CMD__SD3_CMD		0x17071
-				MX6QDL_PAD_SD3_CLK__SD3_CLK		0x10071
-				MX6QDL_PAD_SD3_DAT0__SD3_DATA0		0x17071
-				MX6QDL_PAD_SD3_DAT1__SD3_DATA1		0x17071
-				MX6QDL_PAD_SD3_DAT2__SD3_DATA2		0x17071
-				MX6QDL_PAD_SD3_DAT3__SD3_DATA3		0x17071
-				MX6QDL_PAD_SD3_DAT4__SD3_DATA4		0x17071
-				MX6QDL_PAD_SD3_DAT5__SD3_DATA5		0x17071
-				MX6QDL_PAD_SD3_DAT6__SD3_DATA6		0x17071
-				MX6QDL_PAD_SD3_DAT7__SD3_DATA7		0x17071
+				MX6QDL_PAD_SD3_CMD__SD3_CMD		0x17091
+				MX6QDL_PAD_SD3_CLK__SD3_CLK		0x10091
+				MX6QDL_PAD_SD3_DAT0__SD3_DATA0		0x17091
+				MX6QDL_PAD_SD3_DAT1__SD3_DATA1		0x17091
+				MX6QDL_PAD_SD3_DAT2__SD3_DATA2		0x17091
+				MX6QDL_PAD_SD3_DAT3__SD3_DATA3		0x17091
+				MX6QDL_PAD_SD3_DAT4__SD3_DATA4		0x17091
+				MX6QDL_PAD_SD3_DAT5__SD3_DATA5		0x17091
+				MX6QDL_PAD_SD3_DAT6__SD3_DATA6		0x17091
+				MX6QDL_PAD_SD3_DAT7__SD3_DATA7		0x17091
 				/* Reset eMMC, active low */
-				MX6QDL_PAD_SD3_RST__SD3_RESET		0x1b071
+				MX6QDL_PAD_SD3_RST__SD3_RESET		0x17091
 			>;
 		};
 #endif
